# robosim

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
.claude/skills/add-joint-type/: SKILL.md
.claude/skills/add-task/: SKILL.md
.claude/skills/bump-task-version/: SKILL.md
.claude/skills/check-env-contract/: SKILL.md
.claude/skills/define-reward/: SKILL.md
.claude/skills/parse-urdf-subset/: SKILL.md
.claude/skills/physics-invariant-check/: SKILL.md
.claude/skills/run-eval-protocol/: SKILL.md
.claude/skills/spatial-algebra-conventions/: SKILL.md
bindings/: bindings.cpp
docs/: DESIGN.md  milestones.md
include/robosim/: data.hpp  model.hpp  physics.hpp  system.hpp
python/robosim/: __init__.py  baselines.py  env.py  gym_env.py  physics.py  rewards.py  specs.py  suite.py
python/robosim/eval/: __init__.py  harness.py
python/robosim/tasks/: __init__.py  base.py  point_reach.py
python/robosim/viz/: __init__.py  rerun_viewer.py
scripts/: demo_pointreach.py
src/: physics.cpp
tests/cpp/: test_physics.cpp
tests/py/: test_bindings.py  test_env_contract.py  test_eval.py  test_viz.py
